--- a/style.css
+++ b/style.css
@@ -93,3 +93,23 @@ footer {
   border-radius: 4px;
   cursor: pointer;
 }
+
+.thank-you-page {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.back-button {
+  display: inline-block;
+  margin-top: 2rem;
+  padding: 0.75rem 1.5rem;
+  background-color: #415A77;
+  color: #E0E1DD;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.back-button:hover {
+  background-color: #778DA9;
+}
